<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lt_gray"
    tools:context=".ui.AddTodoItem">

    <TextView
        android:id="@+id/idTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="16dp"
        android:text="@string/item_id_heading"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_ID"
        android:layout_width="100dp"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/item_id"
        android:onClick="addTitle"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toEndOf="@+id/idTV"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_item_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/title"
        android:onClick="addTitle"
        android:padding="5dp"
        android:textColor="#000000"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/add_item_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_ID" />

    <EditText
        android:id="@+id/add_item_description"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_edittext"
        android:gravity="top|left"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:onClick="addDescription"
        android:padding="5dp"
        android:scrollbars="vertical"
        android:textColor="#000000"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/add_item_due_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_title" />

    <TextView
        android:id="@+id/add_item_due_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/due_date"
        android:onClick="addDueDate"
        android:padding="5dp"
        android:textColor="#000000"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/add_item_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_description" />

    <EditText
        android:id="@+id/add_item_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_edittext"
        android:focusableInTouchMode="false"
        android:hint="@string/status"
        android:onClick="addStatus"
        android:padding="5dp"
        android:textColor="#000000"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/add_item_add_images"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_due_date" />

    <Button
        android:id="@+id/add_item_add_images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/mybutton"
        android:text="@string/add_images"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_status" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/add_item_images_RV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_add_images"
        tools:listitem="@layout/list_image_attachment" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/mybutton"
        android:onClick="submitBtnClicked"
        android:text="@string/submit"
        app:layout_constraintBottom_toTopOf="@+id/add_item_images_RV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_item_add_images"
        app:layout_constraintTop_toBottomOf="@+id/add_item_status" />


</androidx.constraintlayout.widget.ConstraintLayout>